--- a/src/Typehead.css
+++ b/src/Typehead.css
@@ -1,9 +1,11 @@
 .selected{
-    color: blue;
+    background: #ececec;
 }
 
 .typehead-container{
-    text-align: center;
+    display: flex;
+    align-items: center;
+    flex-flow: column;
 }
 
 .typehead-input{
@@ -11,3 +13,17 @@
     height: 30px;
 }
 
+.typehead-suggestions{
+    width: 60%;
+    height: 200px;
+    overflow-y: auto;
+    padding: 0px;
+    border: 1px solid grey;
+    border-top: none;
+    margin: 0px;
+}
+
+.typehead-suggestions-item{
+    list-style-type: none;
+    padding: 10px;
+}
