--- a/src/Typehead.css
+++ b/src/Typehead.css
@@ -10,12 +10,13 @@
 
 .typehead-input{
     width: 60%;
-    height: 30px;
+    height: 20px;
+    padding: 10px;
 }
 
 .typehead-suggestions{
-    width: 60%;
-    height: 200px;
+    width: 61.5%;
+    max-height: 200px;
     overflow-y: auto;
     padding: 0px;
     border: 1px solid grey;
